[project]
name = "social-capis"
version = "0.1.0"
description = "Daily offline conversions pipeline to TikTok, Meta, and Snapchat"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "N"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra -q --strict-markers"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]
